--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qv2ray (2.7.1) unstable; urgency=medium
+  * fix: configuration check for xray.
+  * add: support uTLS fingerprint for TLS/XTLS.
+  * update: split alpn text to h2 and http/1.1 checkbox.
+  
+  -- nx111<gd.zhangdz@gmail.com>  Thu, Nov 10 17:56:18 2022 +0800
+  
 qv2ray (2.7.0~pre1-1) unstable; urgency=medium
 
   * New upstream release 2.7.0-pre1
